# FAST-API-Machine-learning-microservice-template

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  data.py  predict.py
backend/app/core/: config.py
backend/app/models/: ml_model.py  schemas.py
backend/app/services/: external_api.py  prediction_service.py
backend/ml_models/: ml_model.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
