[project]
name = "backend"
version = "0.1.0"
description = "Demo FastAPI ML backend"
authors = [
    {name = "Nikolas Juhava",email = "nikolas.juhava@gmail.com"}
]

# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
